# Gringofts

./: CMakeLists.txt
scripts/: installDependencies.sh
src/infra/: CMakeLists.txt
src/infra/monitor/santiago/: metrics_collector.h
src/infra/monitor/santiago/prometheus/: PrometheusMetrics.h
src/infra/raft/: CMakeLists.txt
src/infra/raft/v2/: RaftCore.cpp  RaftCore.h
